Switch to non-broken CodeMirror

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
 <title>Editor test</title>
 <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.8.0/codemirror.min.js"></script>
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.8.0/codemirror.min.css">
+<script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.8.0/codemirror.js"></script>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.8.0/mode/scheme/scheme.min.js"></script>
 <script src="jsLisp.js"></script>
 <script>
