--- a/index.html
+++ b/index.html
@@ -14,73 +14,8 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/codemirror/4.8.0/mode/scheme/scheme.min.js"></script>
 
 <script src="jsLisp.js"></script>
-<script>
-$(function () {
-    // Set up the editor
-    var input = $('#editorInput');
-    var output = $('#editorOutput');
-    var execute = $('#editorExecute');
+<script src="editor.js"></script>
 
-    // Create code editor for the input
-    var editor;
-    var evaluate = function () {
-        var outputText;
-        try {
-            var inputText = editor.getValue();
-            var result = interpreter.evaluate(inputText);
-            if (result !== undefined) {
-                outputText = interpreter.format(result);
-            }
-        } catch (e) {
-            outputText = e.toString();
-        }
-
-        output.val(outputText);
-    };
-
-    // Set up basic evaluation and output
-    var interpreter = new JSLisp.Interpreter();
-    execute.click(function (e) {
-        e.preventDefault();
-        evaluate();
-    });
-
-    editor = CodeMirror.fromTextArea(input.get(0),
-        {
-            mode: 'scheme',
-            extraKeys: {
-                'Ctrl-Enter': evaluate
-            }
-        });
-
-    // Attach editor to code samples
-    var editorModal = $('#editorModal');
-    var showEditor = (function () {
-        var newText = '';
-        editorModal.on('shown.bs.modal', function () {
-            editor.setValue(newText.trim());
-            editor.focus();
-            editor.execCommand('goDocEnd');
-        });
-
-        return function (text) {
-            editorModal.modal('show');
-            if (text !== undefined) {
-                newText = text;
-            }
-        };
-    })();
-
-    // TODO: Direct descendants only
-    $('body pre').click(function (e) {
-        showEditor($(this).text());
-    });
-
-    $('#editorButton').click(function () {
-        showEditor();
-    });
-});
-</script>
     <style>
         .CodeMirror {
             background: #e0e0e0;
