--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <li><strong>combination</strong>, is a thing
     <li><strong>something else</strong>, is a another thing
 </ul>
-<p>More text goes here.</p>
+<p>More text goes here.<sup><a href="#note1">1</a></sup></p>
 <h3>Subsection</h3>
 <p>Body</p>
 <pre>
@@ -58,8 +58,6 @@
 
 <pre>(+ 1 2)</pre>
 <button id="tryItButton" class="hidden btn btn-info btn-xs pull-right">Try it</button>
-
-<button id="editorButton" type="button" class="btn btn-default">Launch editor</button>
 
 <div id="editorModal" class="modal fade" tabindex="-1" role="dialog">
     <div class="modal-dialog">
@@ -100,6 +98,9 @@
         </div>
     </section>
 -->
+
+<hr/>
+<p><a name="note1"></a><sup><a href="#note1">1</a></sup>Really long bit of text that will probably wrap multiple lines... Really long bit of text that will probably wrap multiple lines...Really long bit of text that will probably wrap multiple lines... Really long bit of text that will probably wrap multiple lines...</p>
 
 </div>
 </body>
