--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
 <body>
 <div class="container">
 
+<h2>Chapter 0</h2>
+<h1>Title of the Chapter</h1>
+<blockquote>
+    <p>Here's a quote from some dude</p>
+    <footer>Some dude, <cite>Some Book</cite></footer>
+</blockquote>
+
 <h2>JS Lisp</h2>
 <p>This is a test of JS Lisp in the browser.</p>
 <p>Definitions sample:</p>
