--- a/index.html
+++ b/index.html
@@ -31,7 +31,26 @@
     </style>
 </head>
 <body>
+
+
 <div class="container">
+
+<nav class="navbar navbar-default">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-bar">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <span class="navbar-brand">JS Lisp</span>
+  </div>
+  
+  <div class="collapse navbar-collapse" id="top-bar">
+    <form class="navbar-form navbar-right">
+      <button id="launchEditor" type="button" class="btn btn-default">Launch Editor</button>
+    </form>
+  </div>
+</nav>
 
 <h2>Chapter 0</h2>
 <h1>Title of the Chapter</h1>
