Minor dialog fixes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             font-style: italic;
         }
 
-
+        #editorOutput {
+            resize: none;
+        }
     </style>
 </head>
 <body>
@@ -86,7 +88,7 @@
 <button id="tryItButton" class="hidden btn btn-info btn-xs pull-right">Try it</button>
 
 <div id="editorModal" class="modal fade" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
