A few last final display changes

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 -->
 
 <hr/>
-<p><a name="note1"></a><sup><a href="#note1">1</a></sup>Really long bit of text that will probably wrap multiple lines... Really long bit of text that will probably wrap multiple lines...Really long bit of text that will probably wrap multiple lines... Really long bit of text that will probably wrap multiple lines...</p>
+<p><small><a name="note1"></a><sup><a href="#note1">1</a></sup>Really long bit of text that will probably wrap multiple lines... Really long bit of text that will probably wrap multiple lines...Really long bit of text that will probably wrap multiple lines... Really long bit of text that will probably wrap multiple lines...</small></p>
 
 </div>
 </body>
