Created an intro page

--- a/index.html
+++ b/index.html
@@ -54,37 +54,36 @@
   </div>
 </nav>
 
-<h2>Chapter 0</h2>
-<h1>Title of the Chapter</h1>
-<blockquote>
+<!--<h2>Chapter 0</h2>-->
+<h1>How to use This Site</h1>
+<!--<blockquote>
     <p>Here's a quote from some dude</p>
     <footer>Some dude, <cite>Some Book</cite></footer>
-</blockquote>
+</blockquote>-->
 
-<h2>JS Lisp</h2>
-<p>This is a test of JS Lisp in the browser.</p>
-<p>Definitions sample:</p>
-<ul>
+<h2>What is JS Lisp?</h2>
+<p class="lead">JS Lisp is a tiny, interactive implementation of the <strong>Scheme</strong> programming language that runs in your browser.</p>
+<p>Scheme is a minimalist variant of Lisp that can be studied in order to understand Lisp in general. Lisp is frequently touted as a "powerful" programming language because of its unique design in which code is just data that can manipulated or transformed in order to create new programs at run-time.</p>
+
+<h2>How do I use JS Lisp?</h2>
+<p>JS Lisp is an interactive environment for learning Scheme. At any time, you can click the <strong>Launch Editor</strong> button in the navigation bar at the top of the screen to launch the editor. Note that, on small screens, you may need to expand the navigation bar in order to find the <strong>Launch Editor</strong> button.</p>
+<p>Once you're in the editor, you can type Scheme code into the <strong>Input</strong> text box. When you want to execute your code, simply click the <strong>Evaluate</strong> button or press <strong>Ctrl+Enter</strong>. The output of the evaluation will be displayed in the <strong>Output</strong> text box.</p>
+
+<h2>Demo</h2>
+<p>Below, you'll find a sample of Scheme code in a text box, followed the expected output of evaluating the code.</p>
+<p>If you'd like to try the code out, click the <strong>Try it</strong> on the right side of the example code text box or double-click the example code itself to launch the editor with the example code. Once the editor is shown, you can follow the instructions above to evaluate the code and view the output.</p>
+<!--<ul>
     <li><strong>combination</strong>, is a thing
     <li><strong>something else</strong>, is a another thing
 </ul>
-<p>More text goes here.<sup><a href="#note1">1</a></sup></p>
-<h3>Subsection</h3>
-<p>Body</p>
+<p>More text goes here.<sup><a href="#note1">1</a></sup></p>-->
+<p>As an example, the following code</p>
 <pre>
 (+ 1 2)
 </pre>
-<p>Results in:</p>
+<p>Evaluates to:</p>
 <blockquote>3</blockquote>
-<p>Multi-line</p>
-<pre>
-(+ (* 3
-      (+ 1 2))
-   1)
-</pre>
-<blockquote>10</blockquote>
 
-<pre>(+ 1 2)</pre>
 <button id="tryItButton" class="hidden btn btn-info btn-xs pull-right">Try it</button>
 
 <div id="editorModal" class="modal fade" tabindex="-1" role="dialog">
@@ -103,32 +102,15 @@
                 <textarea id="editorOutput" class="form-control"></textarea>
             </div>
             <div class="modal-footer">
-                <button id="editorExecute" type="button" class="btn btn-primary">Execute</button>
+                <button id="editorExecute" type="button" class="btn btn-primary">Evaluate</button>
                 <button id="editorDismiss" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
 </div>
 
-<!--
-<section id="base">
-        <div class="top-level min">
-            <h3>Input</h3>
-        </div>
-        <div class="top-level max">
-            <textarea id="input"></textarea>
-        </div>
-        <div class="top-level-min">
-            <p><button id="execute">Execute</button> (or press Ctrl+Enter)</p>
-
-            <h3>Output</h3>
-            <textarea id="output" readonly="readonly"></textarea>
-        </div>
-    </section>
--->
-
-<hr/>
-<p><small><a name="note1"></a><sup><a href="#note1">1</a></sup>Really long bit of text that will probably wrap multiple lines... Really long bit of text that will probably wrap multiple lines...Really long bit of text that will probably wrap multiple lines... Really long bit of text that will probably wrap multiple lines...</small></p>
+<!--<hr/>
+<p><small><a name="note1"></a><sup><a href="#note1">1</a></sup>Really long bit of text that will probably wrap multiple lines... Really long bit of text that will probably wrap multiple lines...Really long bit of text that will probably wrap multiple lines... Really long bit of text that will probably wrap multiple lines...</small></p>-->
 
 </div>
 </body>
