--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </nav>
 
 <!--<h2>Chapter 0</h2>-->
-<h1>How to use This Site</h1>
+<h1>How to Use This Site</h1>
 <!--<blockquote>
     <p>Here's a quote from some dude</p>
     <footer>Some dude, <cite>Some Book</cite></footer>
@@ -63,15 +63,15 @@
 
 <h2>What is JS Lisp?</h2>
 <p class="lead">JS Lisp is a tiny, interactive implementation of the <strong>Scheme</strong> programming language that runs in your browser.</p>
-<p>Scheme is a minimalist variant of Lisp that can be studied in order to understand Lisp in general. Lisp is frequently touted as a "powerful" programming language because of its unique design in which code is just data that can manipulated or transformed in order to create new programs at run-time.</p>
+<p><strong>Scheme</strong> is a minimalist variant of Lisp that can be studied in order to understand Lisp in general. Lisp is frequently touted as a "powerful" programming language because of its unique design in which code is just data that can manipulated or transformed in order to create new programs at run-time.</p>
 
 <h2>How do I use JS Lisp?</h2>
 <p>JS Lisp is an interactive environment for learning Scheme. At any time, you can click the <strong>Launch Editor</strong> button in the navigation bar at the top of the screen to launch the editor. Note that, on small screens, you may need to expand the navigation bar in order to find the <strong>Launch Editor</strong> button.</p>
 <p>Once you're in the editor, you can type Scheme code into the <strong>Input</strong> text box. When you want to execute your code, simply click the <strong>Evaluate</strong> button or press <strong>Ctrl+Enter</strong>. The output of the evaluation will be displayed in the <strong>Output</strong> text box.</p>
 
 <h2>Demo</h2>
-<p>Below, you'll find a sample of Scheme code in a text box, followed the expected output of evaluating the code.</p>
-<p>If you'd like to try the code out, click the <strong>Try it</strong> on the right side of the example code text box or double-click the example code itself to launch the editor with the example code. Once the editor is shown, you can follow the instructions above to evaluate the code and view the output.</p>
+<p>Below, you'll find a sample of Scheme code in a text box, followed by the expected output of evaluating the code.</p>
+<p>If you'd like to try the code out, click the <strong>Try it</strong> button on the right side of the example code text box or double-click the text box itself to launch the editor with the example code. Once the editor is shown, you can follow the instructions above to evaluate the code and view the output.</p>
 <!--<ul>
     <li><strong>combination</strong>, is a thing
     <li><strong>something else</strong>, is a another thing
@@ -81,7 +81,7 @@
 <pre>
 (+ 1 2)
 </pre>
-<p>Evaluates to:</p>
+<p>evaluates to:</p>
 <blockquote>3</blockquote>
 
 <button id="tryItButton" class="hidden btn btn-info btn-xs pull-right">Try it</button>
